cluster/homebox/service-homebox.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox-service
  namespace: homebox
spec:
  type: ClusterIP
  selector:
    app: homebox
  ports:
    - port: 7745
      protocol: TCP
